<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.congratulation.CongratulationFragment">

    <TextView
        android:id="@+id/appearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/appearance_header"/>

    <TextView
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="@dimen/subtext_margin"
        android:layout_marginVertical="@dimen/text_margin"
        app:layout_constraintTop_toBottomOf="@id/appearance"
        android:text="@string/appearance_theme_title"/>

    <RadioGroup
        android:id="@+id/radioGroupTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/theme" >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonThemeDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_button_intent"
            android:text="@string/label_default"
            android:checked="true"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonThemeWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_button_intent"
            android:text="@string/label_white"
            android:checked="true"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonThemeGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_button_intent"
            android:text="@string/label_green"
            android:checked="true"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonThemeBordeaux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_button_intent"
            android:text="@string/label_bordeaux"
            android:checked="true"/>


    </RadioGroup>

    <TextView
        android:id="@+id/mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="@dimen/subtext_margin"
        android:layout_marginVertical="@dimen/text_margin"
        app:layout_constraintTop_toBottomOf="@id/radioGroupTheme"
        android:text="@string/appearance_mode_title"/>

    <RadioGroup
        android:id="@+id/radioGroupMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mode" >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonModeNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_button_intent"
            android:text="@string/label_numbers"
            android:checked="true"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonModeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_button_intent"
            android:text="@string/label_text"
            android:checked="true"/>

    </RadioGroup>


    <TextView
        android:id="@+id/behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/radioGroupMode"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/behavior_header"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchCongratulation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/radio_button_intent"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/behavior"
        android:text="@string/behavior_congratulations_title" />

</androidx.constraintlayout.widget.ConstraintLayout>

