<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/moves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/default_moves" />

    <FrameLayout
        android:id="@+id/game"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="17dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/moves">

        <include android:id="@+id/board" layout="@layout/layout_game" />

    </FrameLayout>

    <TextView
        android:id="@+id/seconds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintTop_toBottomOf="@id/game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/default_time"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20sp"
        android:text="@string/label_new_game" />


</androidx.constraintlayout.widget.ConstraintLayout>